--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server/index.js",
-    "start": "node index.js"
+    "start": "nodemon server/index.js"
   },
   "dependencies": {
     "cors": "^2.8.6",
