--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "nodemailer": "^7.0.13"
   },
   "engines": {
     "node": ">=18.0.0"
