delete sendmail feature

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "start": "nodemon server/index.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5",
-    "nodemailer": "^7.0.13"
+    "mongoose": "^9.1.5"
   },
   "engines": {
     "node": ">=18.0.0"
